# CogniField

./: CHANGELOG.md  README.md  __init__.py  __main__.py  _core.py  cognifield_main.py  cognifield_v11.py  pyproject.toml  requirements.txt  setup.py
agent/: __init__.py  agent.py  agent_v3.py  agent_v4.py  agent_v5.py  goal_generator.py  goals.py  internal_state.py  risk_engine.py
agents/: __init__.py  action_system.py  agent_manager.py  agent_v3.py  agent_v4.py  agent_v5.py  agent_v6.py  agent_v7.py  agent_v8.py  agent_v9.py  base_agent.py  body.py  goal_conflict_resolver.py  goal_generator.py  goals.py  group_mind.py  internal_state.py  perception.py  risk_engine.py  self_evaluator.py  strategy_manager.py  trust_system.py
api/: server.py
cli/: __main__.py
communication/: __init__.py  communication_module.py  language_layer.py
core/: __init__.py  deep_thinker.py  event_bus.py  experience_engine.py  interaction_loop.py  meta_cognition.py  uncertainty_engine.py  world_model_v2.py
curiosity/: __init__.py  advanced_curiosity.py  curiosity_engine.py  experiment_engine.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  EMBODIED_GUIDE.md  LLM_INTEGRATION.md  QUICKSTART.md  README_v3.md  README_v4.md  README_v5.md  README_v6.md  README_v9.md
encoder/: audio_encoder.py  image_encoder.py  text_encoder.py
environment/: __init__.py  rich_env.py  simple_env.py
evaluation/: metrics.py
examples/: api_client.py  basic_usage.py  decision_demo.py  demo.py  demo_v11.py  demo_v11_part2.py  demo_v11_part3.py  demo_v3.py  demo_v4.py  demo_v5.py  demo_v6.py  demo_v7.py  (+3 more)
(+55 files in other folders)
