[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognifield"
version = "11.0.0"
description = "Adaptive Multi-Agent Cognitive Intelligence Framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "Pillow>=9.0",
]

[project.optional-dependencies]
api = ["flask>=2.0"]
dev = ["flask>=2.0", "pytest>=7.0"]
all = ["flask>=2.0", "pytest>=7.0"]

[project.scripts]
cognifield = "cognifield.cli.__main__:main"

[project.urls]
Homepage = "https://github.com/yourorg/cognifield"
Documentation = "https://github.com/yourorg/cognifield#readme"
Issues = "https://github.com/yourorg/cognifield/issues"

[tool.setuptools.packages.find]
exclude = ["tests*", "*.tests*"]
